--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -17,6 +17,7 @@ body {
 
 a {
   color: var(--color-link);
+  text-decoration:none;
 }
 a:hover {
   cursor:pointer;
@@ -25,11 +26,15 @@ a:hover {
 .disabled {
 	opacity:0.5;
 }
-.disabled:hover {
+.disabled a:hover {
 	cursor: not-allowed;
 }
 .active {
 	border:2px solid tomato;
+}
+.site-container {
+  margin:2.0em auto;
+  width:70%;
 }
 /* Snippets */
 .site-header {
@@ -51,99 +56,45 @@ a:hover {
   font-family: var(--font-serif);
   text-align: center;
 }
-.container {
-  margin:2.0em auto;
-  width:70%;
-}
 
 .fa-heart {
 	font-size:0.8em;
 }
-/* Dog image gallery slideshow */
-.close-me {
-	float:right;
-}
-
-.dog-gallery-slideshow {
-	display: none;
-	width:100%;
-	margin:0 auto;
-}
-.dog-gallery-slideshow-info {
-	float:right;
-	font-size:170%;
-	margin-right:1.0em;
-	margin-top:-0.25em;
-}
-.dog-gallery-slideshow-info-popup {
-	font-size:0.5em;
-}
-.dog-gallery-navigation {
-	display:flex;
-	justify-content:center;
-}
-.dog-gallery-navigation a i{
-  display:block;
-  font-size:170%;
-}
-.dog-image-counter {
-	text-align: center;
-	margin-left: 2.0em;
-	margin-right: 2.0em;
-	margin-top: 1.7em;
-	color:var(--color-secondary);
-}
-.dog-gallery {
-	margin-top:1.0em;
-}
-.dog-image img{
+/* Image galleries */
+.gallery-image img{
 	width:100%;
 	border-radius:5px;
 }
-.dog-gallery-thumbnail-all {
-	display:flex;
-	justify-content: center;
-}
-.dog-gallery-thumbnail-nav {
-	font-size:170%;
-	margin-top:1.0em;
-}
-.dog-gallery-thumbnail {
-	margin-top:1.0em;
-	margin-bottom:1.0em;
-	display:flex;
-
-}
-.dog-gallery-thumbnail .dog-image {
-	width:20%;
-	padding:0.5em;
-}
-.dog-gallery-thumbnail .dog-image:hover {
-	cursor: zoom-in;
-}
-.dog-gallery-thumbnail .dog-image img {
-	width:6.0em;
-	height:4.0em;
-}
-.dog-image-set-counter {
-	font-size:40%;
-}
-
-.box {
-	height:1.0em;
-	width:auto;
-	background:black;
-}
 
 
-.image-viewer {
+/* Gallery thumbnail */
+.gallery-thumb-container .image-viewer {
 	display:flex;
 	justify-content:center;
-
+}
+.gallery-thumb-container .gallery-image img {
+	margin:1.0em;
+	width:9.0em;
+	height:6.0em;
 }
 
-#gallery-thumb-container .dog-image img{
-	width:13.0em;
-	height:8.0em;
-	margin:1.0em;
+/* Gallery controls */
+.close {
+	float:right;
+}
+.gallery-controls {
+	display:flex;
+	justify-content:space-between;
+	font-size:1.5em;
+}
+.gallery-nav {
+	display:flex;
+	justify-content:space-between;
+}
+
+.gallery-nav .image-counter {
+	font-size:0.6em;
+	margin-left:1.0em;
+	margin-right:1.0em;
+	margin-top:0.5em;
 }
