slideshow doesn't appear until user selects thumb, added noscript for turned off JS

--- a/assets/styles/site.css
+++ b/assets/styles/site.css
@@ -67,17 +67,14 @@ a:hover {
 	border-radius:5px;
 }
 /* Gallery controls */
-.close {
-	float:right;
-}
+
 .gallery-controls {
 	display:flex;
-	justify-content:space-between;
+	justify-content:center;
 	font-size:1.5em;
 }
 .gallery-nav {
 	display:flex;
-	justify-content:space-between;
 }
 
 .gallery-nav .image-counter {
@@ -86,7 +83,14 @@ a:hover {
 	margin-right:1.0em;
 	margin-top:0.5em;
 }
-
+.close {
+	position:absolute;
+	right:5.0em;
+}
+/* Gallery slideshow */
+.gallery-slideshow-container {
+	display:none;
+}
 /* Gallery thumbnail */
 .gallery-thumb-container .image-viewer {
 	display:flex;
@@ -97,4 +101,5 @@ a:hover {
 	width:9.0em;
 	height:6.0em;
 }
+
 
